--- a/V3Lib/V3Lib.csproj
+++ b/V3Lib/V3Lib.csproj
@@ -3,8 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="MessagePack" Version="2.1.165" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+    <PackageReference Include="MessagePack" Version="2.1.165"/>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8"/>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.8"/>
+    <PackageReference Include="KnstArchitecture.SequentialGuid" Version="1.0.0"/>
   </ItemGroup>
 </Project>
