--- a/V3WebApi/V3WebApi.csproj
+++ b/V3WebApi/V3WebApi.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
-    <ProjectReference Include="..\V3Lib\V3Lib.csproj" />
+    <ProjectReference Include="..\V3Lib\V3Lib.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MessagePack.AspNetCoreMvcFormatter" Version="2.1.194" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7" />
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.7" />
+    <PackageReference Include="MessagePack.AspNetCoreMvcFormatter" Version="2.1.194"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.1.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.5.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7"/>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.7"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.6.1"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
