--- a/V3Lib/V3Lib.csproj
+++ b/V3Lib/V3Lib.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.8"/>
     <PackageReference Include="KnstArchitecture.SequentialGuid" Version="1.0.0"/>
     <PackageReference Include="MongoDB.Driver" Version="2.11.2"/>
+    <PackageReference Include="AutoMapper" Version="10.0.0"/>
   </ItemGroup>
 </Project>
