--- a/V3WebApi/appsettings.json
+++ b/V3WebApi/appsettings.json
@@ -1,9 +1,26 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://127.0.0.1:5341"
+        }
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:u}] [{Level:u3}]{NewLine}{SourceContext}{NewLine}{Message:lj}{NewLine}{Exception}{NewLine}"
+        }
+      }
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Override": {
+        "System": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "CorrelationId.CorrelationIdMiddleware": "Warning"
+      }
     }
   },
   "AllowedHosts": "*"
